fixed a bug when the last user of max user wouldn't get read from. Also the sockets have been upgraded to ipv6!

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 .PHONY: clean
 
+FLAGS = -Wall -pedantic -std=c99
 OBJS = user.o ashes.o
 BUILD_DIR = ../bin
 INCLUDES = include
@@ -9,9 +10,12 @@ all: ashes.o user.o
 	rm *.o
 
 ashes.o: ashes.c
-	gcc -Wall -I${INCLUDES} -c ashes.c
+	gcc ${FLAGS} -I${INCLUDES} -c ashes.c
 
 user.o: user.c
-	gcc -Wall -I${INCLUDES} -c user.c
+	gcc ${FLAGS} -I${INCLUDES} -c user.c
 clean:
 	rm $(BUILD_DIR)/ashes
+
+cleanobj:
+	rm *.o
