--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@ BUILD_DIR = ../bin
 INCLUDES = include
 
 all: ashes.o user.o
-	gcc ashes.o user.o -o ${BUILD_DIR}/ashes
+	gcc ${OBJS} -o ${BUILD_DIR}/ashes
 	rm *.o
 
 ashes.o: ashes.c
@@ -14,6 +14,7 @@ ashes.o: ashes.c
 
 user.o: user.c
 	gcc ${FLAGS} -I${INCLUDES} -c user.c
+
 clean:
 	rm $(BUILD_DIR)/ashes
 
